objects/Programme__c.object
<CustomObject><fields>
        <fullName>AD_Expiry__c</fullName>
        <description>AD account expiry date</description>
        <inlineHelpText>Date AD account expires</inlineHelpText>
        <label>AD Expiry</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Academic_Credits__c</fullName>
        <formula>Programme_Version__r.Academic_Credits__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Taken from Version level</inlineHelpText>
        <label>Academic Credits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Academic_Year__c</fullName>
        <description>For Instance level records</description>
        <inlineHelpText>For reporting, use academic year for this Instance, not from the Version</inlineHelpText>
        <label>Academic Year</label>
        <picklist>
            <picklistValues>
                <fullName>14/15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16/17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17/18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18/19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19/20</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Used for lookup from Student processes</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Apply_Link__c</fullName>
        <description>Website Apply Link</description>
        <formula>"https://mylstm.force.com/students/ChooseProgramme?programmeid="&amp;Id</formula>
        <inlineHelpText>For use in Website upload</inlineHelpText>
        <label>Apply Link</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Assigned_Modules__c</fullName>
        <description>RSF Count of Programme Modules assigned to this Programme</description>
        <inlineHelpText>Count of related Modules</inlineHelpText>
        <label>Assigned Modules</label>
        <summaryForeignKey>Programme_Module__c.Programme__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Audit_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Audit Log</label>
        <referenceTo>SIS_Audit__c</referenceTo>
        <relationshipLabel>Programmes</relationshipLabel>
        <relationshipName>Active_Programmes</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Audit_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hidden, for testing &amp; manual trigger of SIS Audit record</description>
        <label>Audit Trigger</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Capacity__c</fullName>
        <description>Number of students that can be taken on this Programme</description>
        <label>Capacity</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Code__c</fullName>
        <formula>Programme_Version__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Taken from Version level</inlineHelpText>
        <label>Code</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Director_of_Studies__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Director of Studies</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Programmes</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>End_Date__c</fullName>
        <description>Last Date module is valid</description>
        <label>End Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>External_Form_Read_Only__c</fullName>
        <label>External Form Read Only</label>
        <type>Url</type>
    </fields><fields>
        <fullName>External_Form__c</fullName>
        <description>eg Form Assembly</description>
        <inlineHelpText>URL of external form creation service</inlineHelpText>
        <label>External Form</label>
        <type>Url</type>
    </fields><fields>
        <fullName>Fee_TBC__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used in applications portal search results; indicates that fees are To Be Confirmed. Use previous years fees in Home/EU and Overseas fields for internal reporting of applications pipeline value</inlineHelpText>
        <label>Fee TBC</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>HESA_Audit__c</fullName>
        <formula>Programme_Version__r.Master_Link__r.HESA_Audit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Set at Master Version level</inlineHelpText>
        <label>HESA Audit</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>HESA_Fundable__c</fullName>
        <label>HESA Fundable</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>HESA_Length__c</fullName>
        <label>HESA Length</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>HESA_Level__c</fullName>
        <label>HESA Level</label>
        <picklist>
            <picklistValues>
                <fullName>PGT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>HESA_Mode__c</fullName>
        <label>HESA Mode</label>
        <picklist>
            <picklistValues>
                <fullName>FT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>HESA_Price_Group__c</fullName>
        <label>HESA Price Group</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Home_EU_Fee__c</fullName>
        <inlineHelpText>Fee for UK and rest of EU students; if 'Fee TBC' is checked this amount is an estimate for reporting</inlineHelpText>
        <label>Home EU Fee</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Homepage_VLE_ID__c</fullName>
        <formula>Programme_Version__r.Homepage_VLE_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Homepage VLE ID</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Instance_Code__c</fullName>
        <formula>Programme_Code__c &amp; "-" &amp;  Instance_Suffix__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Instance Code</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Instance_Date__c</fullName>
        <description>Check if used</description>
        <label>X Instance Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Instance_Reference__c</fullName>
        <description>DO NOT USE - to be deleted</description>
        <label>X Instance Reference</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Instance_Suffix__c</fullName>
        <label>Instance Suffix</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Master_Name__c</fullName>
        <description>Hidden, for transcript</description>
        <formula>Programme_Version__r.Master_Link__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Name</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Mode__c</fullName>
        <formula>Text(  Programme_Version__r.Mode__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Taken from Version level</inlineHelpText>
        <label>Mode</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Overseas_Fee__c</fullName>
        <inlineHelpText>Fees for students outside of EU; if 'Fee TBC' is checked this amount is an estimate for reporting</inlineHelpText>
        <label>Overseas Fee</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Places_Taken__c</fullName>
        <inlineHelpText>Takes maximum of Places Taken across related Programme Module</inlineHelpText>
        <label>Places Taken</label>
        <summarizedField>Programme_Module__c.Places_Taken__c</summarizedField>
        <summaryForeignKey>Programme_Module__c.Programme__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Programme_Code__c</fullName>
        <description>Populated by 'Set Instance Code' workflow rule on creation of Instance record only. Hidden on page layouts. Initial purpose to allow Instance records to show up in global search when searching on Programme Code.</description>
        <label>Programme Code</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Programme_Group__c</fullName>
        <formula>TEXT( Programme_Version__r.Programme_Group__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Taken from Version level</inlineHelpText>
        <label>Programme Group</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Programme_Instance_Name__c</fullName>
        <description>DO NOT USE - to be deleted</description>
        <formula>Name &amp; " - " &amp;  Instance_Suffix__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>X Programme Instance Name</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Programme_Master__c</fullName>
        <description>Hidden, used for HESA XML report</description>
        <formula>Programme_Version__r.Master_Link__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Programme Master</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Programme_Type_External__c</fullName>
        <formula>TEXT(  Programme_Version__r.Master_Link__r.Programme_Type_External__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Taken from Programme Version; for display in MyLSTM Application form</inlineHelpText>
        <label>Programme Type External</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Programme_Type__c</fullName>
        <description>DO NOT USE, to be deleted</description>
        <label>X Programme Type</label>
        <picklist>
            <picklistValues>
                <fullName>MSc Programme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Diploma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSc Module</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Short Course</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Programme_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Programme Version</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Programme_Version__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Versions, Versions, Specification, Versions - Pre Approved, Specification Edit</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Programme_Version__c</referenceTo>
        <relationshipLabel>Programme Instances</relationshipLabel>
        <relationshipName>Programmes_Instances</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Referee_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick this if emails are NOT to be sent to referees of applicants to this programme</inlineHelpText>
        <label>Referee Override</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Remaining_Places__c</fullName>
        <formula>Capacity__c -   Places_Taken__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Capacity less Places Taken</inlineHelpText>
        <label>Remaining Places</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Test_Class_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Class Record</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Type__c</fullName>
        <formula>Text ( Programme_Version__r.Programme_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Taken from Version level</inlineHelpText>
        <label>Type</label>
        <type>Text</type>
    </fields><fields>
        <fullName>View_Related_Modules__c</fullName>
        <formula>HYPERLINK("/00O20000004hzqD?pv0=" &amp;Id, "Report Link")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View Related Modules</label>
        <type>Text</type>
    </fields><fields>
        <fullName>sfxId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>true</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>Private</externalSharingModel><label>Programme</label><nameField>
        <label>Instance Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Programmes</pluralLabel><recordTypeTrackFeedHistory>false</recordTypeTrackFeedHistory><recordTypeTrackHistory>false</recordTypeTrackHistory><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Type__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Active__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Programmes</label>
    </listViews><listViews>
        <fullName>AllMScProgrammes</fullName>
        <columns>NAME</columns>
        <columns>Programme_Code__c</columns>
        <columns>Instance_Suffix__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Overseas_Fee__c</columns>
        <columns>Home_EU_Fee__c</columns>
        <columns>Fee_TBC__c</columns>
        <columns>Active__c</columns>
        <columns>Type__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>MSc Programme</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All MSc Programmes - Active</label>
    </listViews><listViews>
        <fullName>AllProfDiplomas</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Instance_Suffix__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Type__c</columns>
        <columns>Active__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Professional Diploma</value>
        </filters>
        <label>All Professional Diplomas</label>
    </listViews><listViews>
        <fullName>All_MSc_Programmes_16_17</fullName>
        <columns>NAME</columns>
        <columns>Programme_Code__c</columns>
        <columns>Instance_Suffix__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Overseas_Fee__c</columns>
        <columns>Home_EU_Fee__c</columns>
        <columns>Fee_TBC__c</columns>
        <columns>Active__c</columns>
        <columns>Type__c</columns>
        <columns>Programme_Version__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>HESA_Price_Group__c</columns>
        <columns>HESA_Mode__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>MSc Programme</value>
        </filters>
        <filters>
            <field>Academic_Year__c</field>
            <operation>equals</operation>
            <value>16/17</value>
        </filters>
        <label>All MSc Programmes - 16/17</label>
    </listViews><listViews>
        <fullName>All_MSc_Programmes_17_18</fullName>
        <columns>NAME</columns>
        <columns>Programme_Code__c</columns>
        <columns>Instance_Suffix__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Overseas_Fee__c</columns>
        <columns>Home_EU_Fee__c</columns>
        <columns>Fee_TBC__c</columns>
        <columns>Active__c</columns>
        <columns>Type__c</columns>
        <columns>Programme_Version__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>MSc Programme</value>
        </filters>
        <filters>
            <field>Academic_Year__c</field>
            <operation>equals</operation>
            <value>17/18</value>
        </filters>
        <label>All MSc Programmes - 17/18</label>
    </listViews><listViews>
        <fullName>All_Programmes</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Instance_Suffix__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Type__c</columns>
        <columns>Active__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Programmes</label>
    </listViews><listViews>
        <fullName>All_Programmes_Instances_for_LSTM_Web</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Type__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Active__c</columns>
        <columns>Home_EU_Fee__c</columns>
        <columns>Overseas_Fee__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>AD_Expiry__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Academic_Year__c</field>
            <operation>equals</operation>
            <value>15/16</value>
        </filters>
        <label>All Programmes Instances for LSTM Web</label>
    </listViews><listViews>
        <fullName>Allshortcourses</fullName>
        <booleanFilter>3 AND (1 OR 2)</booleanFilter>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Instance_Suffix__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Type__c</columns>
        <columns>Referee_Override__c</columns>
        <columns>AD_Expiry__c</columns>
        <columns>Active__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Academic_Credits__c</columns>
        <columns>Academic_Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Short Course</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Masters Module</value>
        </filters>
        <filters>
            <field>Academic_Year__c</field>
            <operation>equals</operation>
            <value>15/16,16/17</value>
        </filters>
        <label>All Short Course Instances</label>
    </listViews><listViews>
        <fullName>Allshortcourses16_17</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Instance_Suffix__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Type__c</columns>
        <columns>Referee_Override__c</columns>
        <columns>AD_Expiry__c</columns>
        <columns>Active__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Academic_Credits__c</columns>
        <columns>Academic_Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Short Course,Masters Module</value>
        </filters>
        <filters>
            <field>Academic_Year__c</field>
            <operation>equals</operation>
            <value>16/17</value>
        </filters>
        <label>Short Course Instances 16/17</label>
    </listViews><listViews>
        <fullName>Color_Test_Listview</fullName>
        <columns>NAME</columns>
        <columns>Instance_Suffix__c</columns>
        <columns>Academic_Year__c</columns>
        <columns>Active__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Home_EU_Fee__c</columns>
        <columns>Overseas_Fee__c</columns>
        <columns>Fee_TBC__c</columns>
        <columns>Type__c</columns>
        <columns>Code__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>MSc Programme</value>
        </filters>
        <filters>
            <field>Academic_Year__c</field>
            <operation>equals</operation>
            <value>15/16</value>
        </filters>
        <label>Color Test Listview</label>
        <sharedTo>
            <group>Color_Group</group>
        </sharedTo>
    </listViews><listViews>
        <fullName>HESA_Programmes_Instances</fullName>
        <columns>Code__c</columns>
        <columns>HESA_Fundable__c</columns>
        <columns>HESA_Length__c</columns>
        <columns>HESA_Level__c</columns>
        <columns>HESA_Mode__c</columns>
        <columns>HESA_Price_Group__c</columns>
        <columns>Academic_Credits__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Academic_Year__c</field>
            <operation>equals</operation>
            <value>15/16</value>
        </filters>
        <filters>
            <field>HESA_Price_Group__c</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>HESA Programmes Instances</label>
    </listViews><listViews>
        <fullName>Inactive</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Type__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Active__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive Programmes</label>
    </listViews><listViews>
        <fullName>Online_Course_Instances_16_17</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Instance_Suffix__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Type__c</columns>
        <columns>Referee_Override__c</columns>
        <columns>AD_Expiry__c</columns>
        <columns>Active__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Academic_Credits__c</columns>
        <columns>Academic_Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Online Course</value>
        </filters>
        <filters>
            <field>Academic_Year__c</field>
            <operation>equals</operation>
            <value>16/17</value>
        </filters>
        <label>Online Course Instances 16/17</label>
    </listViews><listViews>
        <fullName>Website_Active_Programmes</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Date__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Website Active Programmes</label>
    </listViews><recordTypes>
        <fullName>PGR_Programme</fullName>
        <active>true</active>
        <description>For all PGR Programmes</description>
        <label>PGR Programme</label>
    </recordTypes><recordTypes>
        <fullName>PGT_Programme</fullName>
        <active>true</active>
        <description>For all PGT Programmes, including MSc, Professional Diplomas, Short Courses, etc</description>
        <label>PGT Programme</label>
    </recordTypes></CustomObject>